--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="5dp"
         android:adjustViewBounds="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -20,6 +20,8 @@
         app:srcCompat="@drawable/placeholder_landscape" />
 
     <TextView
+        android:clickable="true"
+        android:onClick="createMapIntent"
         android:id="@+id/text_view_address"
         android:layout_width="0dp"
         android:layout_height="30dp"
@@ -36,6 +38,8 @@
         app:layout_constraintTop_toBottomOf="@+id/image_view_candy_store" />
 
     <TextView
+        android:clickable="true"
+        android:onClick="createPhoneIntent"
         android:id="@+id/text_view_phone"
         android:layout_width="0dp"
         android:layout_height="30dp"
